// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`componentMethodsJsDocHandler > adds descriptions 1`] = `
[
  {
    "description": "The foo method.",
    "docblock": "
        The foo method.
        @param test The test
        @returns The number
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "description": "The test",
        "name": "test",
        "optional": false,
      },
    ],
    "returns": {
      "description": "The number",
    },
  },
]
`;

exports[`componentMethodsJsDocHandler > adds js doc types when no flow types 1`] = `
[
  {
    "description": null,
    "docblock": "
        @param {string} test
        @returns {string}
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "name": "test",
        "optional": false,
        "type": {
          "name": "string",
        },
      },
    ],
    "returns": {
      "type": {
        "name": "string",
      },
    },
  },
]
`;

exports[`componentMethodsJsDocHandler > keeps flow types over js doc types 1`] = `
[
  {
    "description": null,
    "docblock": "
        @param {string} test
        @returns {string}
      ",
    "modifiers": [],
    "name": "foo",
    "params": [
      {
        "name": "test",
        "optional": false,
        "type": {
          "name": "number",
        },
      },
    ],
    "returns": {
      "type": {
        "name": "number",
      },
    },
  },
]
`;
